# audioLive

./: .gitignore
audio/audioanalysis/: AudioAnalyzer.cpp  FastFourierTransform.hpp
audio/audiostream/: AudioStream.hpp  PAProxy.hpp  PAProxyImpl.cpp  PAProxyImpl.hpp  ThreadedMainloop.cpp  ThreadedMainloop.hpp
audio/common/: AudioTypes.hpp
audioanalysis/: AudioAnalyzer.h
audiostream/: PAProxy.cpp  PAProxy.hpp
common/: DataTypes.hpp  OverwritingQueue.hpp
modules/core/: CMakeLists.txt
modules/core/include/core/: base.hpp  defs.hpp  fast_math.hpp  math_utils.hpp  matx.hpp  matx.inl.hpp  sarurate.hpp  traits.hpp
modules/core/src/: lapack.cpp  matrix_decomp.cpp
rtapp/: CMakeLists.txt  run_build.sh
rtapp/src/: CMakeLists.txt
rtapp/src/app/: CMakeLists.txt  RealtimeApplication.cpp  RealtimeApplication.hpp  main.cpp
rtapp/src/audio/: AudioModel.hpp
rtapp/src/audio/audioProxy/: audio.raw  main.cpp  pa  record_from_monitor  simplePA.cpp
rtapp/src/audio/common/: AudioDataTypes.hpp
rtapp/src/audio/interface/: IAudioDataConsumer.hpp  IAudioDataExchange.hpp  IAudioModel.hpp
rtapp/src/audio/pulseAudioProxy/: PaThreadedMainLoop.cpp  PaThreadedMainLoop.hpp  PulseAudioProxy.cpp  pa_stream  pa_stream.c
rtapp/src/common/: CMakeLists.txt
rtapp/src/common/workerBase/: WorkerBase.cpp  WorkerBase.hpp
rtapp/src/common/workerWrapperBase/: WorkerWrapperBase.cpp  WorkerWrapperBase.hpp
rtapp/src/interface/: IWorker.hpp
rtapp/src/presentation/: PresentationLayer.cpp  PresentationLayer.hpp
rtapp/src/utils/: CMakeLists.txt  Logger.hpp  OverwritingQueue.hpp  Version.cpp  Version.hpp
wav_operation/interface/: IReadableWave.hpp
wav_operation/src/: Endianness.hpp  ReadableWave.hpp  WaveHeader.hpp  WaveReader.cpp  WaveReader.hpp  WaveUtils.hpp  WaveWriter.hpp  wav_file.cpp  wav_file.h  wav_header.cpp  wav_header.h
wav_operation/src/interface/: IReadableWave.hpp  IWaveFile.hpp
wav_operation/unit-test/: EndiannessTest.cpp  WaveUtilsTest.cpp  endianess  unit_test.sh  wav_header_unittest  wav_header_unittest.cpp
waveoperation/src/: .WaveUtils.hpp.swp  CMakeLists.txt  ReadableWave.hpp  Wave.hpp  WaveHeader.hpp  WaveReader.cpp  WaveReader.hpp  WaveUtils.hpp  WaveWriter.cpp  WaveWriter.hpp
waveoperation/src/interface/: IReadableWave.hpp  IWaveFile.hpp
waveoperation/unit-test/: CMakeLists.txt  EndiannessTest.cpp  WaveReaderTest.cpp  WaveUtilsTest.cpp  WaveWriterTest.cpp  reader  unit_test.sh
